--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,11 @@
             <artifactId>JDA</artifactId>
             <version>5.0.0-beta.12</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.5</version> <!-- Replace with the latest version of Jackson Databind -->
+        </dependency>
     </dependencies>
 
 </project>
